apps/ai-verordening-beslishulp/sandbox/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: dpl
spec:
  replicas: 0
  template:
    metadata:
      labels:
        app: ai-verordening-beslishulp
    spec:
      automountServiceAccountToken: false
      containers:
        - image: ai-verordening-beslishulp-image
          name: ai-verordening-beslishulp
          imagePullPolicy: Always
          ports:
            - containerPort: 8080
          resources:
            limits:
              memory: 256Mi
              ephemeral-storage: "256Mi"
            requests:
              cpu: 500m
              memory: 128Mi
