apps/ai-verordening-beslishulp/sandbox/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: svc
spec:
  ports:
    - port: 80
      protocol: TCP
      targetPort: 8080
  selector:
    app: ai-verordening-beslishulp
  type: ClusterIP
