apps/ai-verordening-beslishulp/sandbox/ingress-old.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ing-old
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod
    nginx.ingress.kubernetes.io/permanent-redirect: https://ai-verordening-beslishulp.apps.digilab.network
spec:
  ingressClassName: nginx
  rules:
    - host: ai-act-decisiontree.apps.digilab.network
      http:
        paths:
          - backend:
              service:
                name: svc
                port:
                  number: 80
            path: /
            pathType: Prefix
  tls:
    - hosts:
        - ai-act-decisiontree.apps.digilab.network
      secretName: ai-act-decisiontree-tls
